<resources>
    <string name="app_name">AreaMeasureProject</string>

    <string name="google_maps_api_key">AIzaSyD0gn7oDRPXPyTCcpHC4Ywo5DMi9W7dgWU</string>

    <string name="exitTextView">Exit</string>
    <string name="my_app">Area Measure App</string>
    <string name="get_location">get location</string>
    <string name="profile">profile</string>
    <string name="measurements">Measurements</string>
    <string name="my_app_title">Area Measure Project</string>
    <string name="map">Map</string>
    <string name="saved_measurements">Saved measurements</string>
    <string name="settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="export_measurement_to">Export measurement to …</string>
    <string name="recycle_view_name">Name:</string>
    <string name="recycle_view_date">Date:</string>
    <string name="recycle_view_area">Area:</string>
    <string name="load_measurement">Load measurement</string>
    <string name="export_measurement">Export measurement</string>
    <string name="coordinates">Coordinates:</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="area">Area</string>
    <string name="measure_name">Measure name</string>
    <string name="app_info">App info</string>

    <string name="location_updates_title">Location updates interval</string>
    <string name="units_title">Measurement system</string>
    <string name="details_title">Open application details and system settings</string>

    <string name="gps_header">Location</string>
    <string name="units_header">Units</string>
    <string name="other_header">Other</string>
    <string name="check_box_preference_cm">cm²</string>
    <string name="check_box_preference_m2">m²</string>
    <string name="check_box_preference_km2">km²</string>
    <string name="other_summary">Here you can change settings like granted permissions. manage storage, etc.</string>
    <string name="location_priority_title">Location accuracy</string>

    <string name="pref_priority_label_low">low accuracy</string>
    <string name="pref_priority_label_balanced">balanced accuracy</string>
    <string name="pref_priority_label_high">high accuracy</string>

    <string name="pref_priority_low_value">104</string>
    <string name="pref_priority_balanced_value">102</string>
    <string name="pref_priority_high_value">100</string>

    <string name="pref_updates_label_5s">5s</string>
    <string name="pref_updates_label_10s">10s</string>
    <string name="pref_updates_label_15s">15s</string>

    <string name="pref_updates_5s_value">5000</string>
    <string name="pref_updates_10s_value">10000</string>
    <string name="pref_updates_15s_value">15000</string>

    <string name="author_kamil_jacko">Author: Kamil Jacko</string>
    <string name="application_name">Application name: Area Measure Project</string>
    <string name="release_date">Release date: 01.11.2020</string>
    <string name="android_version">Android version: 8.1</string>

</resources>