<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/gps_header">

        <ListPreference
            android:entries="@array/pref_priority_option_labels"
            android:entryValues="@array/pref_priority_option_values"
            app:defaultValue="100"
            app:key="location_accuracy"
            app:title="@string/location_priority_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:entries="@array/pref_updates_option_labels"
            android:entryValues="@array/pref_updates_option_values"
            app:defaultValue="10000"
            app:key="location_updates"
            app:title="@string/location_updates_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/units_header">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="check_box_preference_cm"
            android:title="@string/check_box_preference_cm" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="check_box_preference_m"
            android:title="@string/check_box_preference_m2" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="check_box_preference_km"
            android:title="@string/check_box_preference_km2" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/other_header">

        <Preference
            app:key="systemSettingsPreference"
            app:summary="@string/other_summary"
            app:title="@string/details_title" />

    </PreferenceCategory>

</PreferenceScreen>