<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecycleViewItemActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <include layout="@layout/main_return" />

    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/scrollView_coordinates"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout2">

        <TableRow
            android:id="@+id/row_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <TextView
                android:id="@+id/tv_recycle_view_name"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/recycle_view_name"
                android:textAlignment="textStart"
                android:textAppearance="@style/mainFont" />

            <TextView
                android:id="@+id/tv_recycle_view_name_value"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text=""
                android:textAlignment="textStart"
                android:textAppearance="@style/mainFont" />
        </TableRow>

        <TableRow
            android:id="@+id/row_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <TextView
                android:id="@+id/tv_recycle_view_date"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/recycle_view_date"
                android:textAlignment="textStart"
                android:textAppearance="@style/mainFont" />

            <TextView
                android:id="@+id/tv_recycle_view_date_value"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text=""
                android:textAlignment="textStart"
                android:textAppearance="@style/mainFont" />
        </TableRow>

        <TableRow
            android:id="@+id/row_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <TextView
                android:id="@+id/tv_recycle_view_area"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/recycle_view_area"
                android:textAlignment="textStart"
                android:textAppearance="@style/mainFont" />

            <TextView
                android:id="@+id/tv_recycle_view_area_value"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text=""
                android:textAlignment="textStart"
                android:textAppearance="@style/mainFont" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/bt_recycle_view_load"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="70dp"
        android:onClick="clickLoadMeasurement"
        android:padding="0dp"
        android:text="@string/load_measurement"
        android:textAppearance="@style/mainFont"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/scrollView_coordinates"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <Button
        android:id="@+id/bt_recycle_view_export"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:onClick="clickExportMeasurement"
        android:padding="0dp"
        android:text="@string/export_measurement"
        android:textAppearance="@style/mainFont"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_recycle_view_load"
        app:layout_constraintVertical_bias="0.056" />

    <TextView
        android:id="@+id/tv_recycle_view_coordinates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coordinates"
        android:textAlignment="textStart"
        android:textAppearance="@style/mainFont"
        app:layout_constraintBottom_toTopOf="@+id/scrollView_coordinates"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toEndOf="@+id/bt_recycle_view_load"
        app:layout_constraintTop_toTopOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.95" />

    <ScrollView
        android:id="@+id/scrollView_coordinates"
        android:layout_width="200dp"
        android:layout_height="400dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_recycle_view_coordinates_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textAppearance="@style/mainFont" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>